--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,7 +9,9 @@
   <link rel="stylesheet" href="blog.css" />
 </head>
 
- <div class="container py-4 px-3 mx-auto">
+<body class="bg-white p-4">
+
+  <div class="container py-4 px-3 mx-auto">
     <header class="d-flex align-items-center justify-content-start">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
       <nav class="d-flex gap-4">
@@ -18,106 +21,131 @@
         <a class="brand-color-menu2">Blog</a>
       </nav>
     </header>
-      
-      <div class="container py-5">
-        <div class="row align-items-center">
-          <div class="col-auto">
-            <img src="images/MAQUETTAGE WEB images/Logo.png" alt="Grandiose Logo" class="img-custom2">
+
+    <div class="container py-5">
+      <div class="row align-items-center">
+        <div class="col-auto">
+          <svg width="208" height="208" viewBox="0 0 208 208" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect y="16.7339" width="192" height="192" rx="24" transform="rotate(-5 0 16.7339)" fill="#520DC2" />
+            <path
+              d="M111.948 152.21C115.193 151.926 117.97 151.317 120.28 150.383C120.943 149.593 121.377 148.701 121.583 147.707C121.793 146.761 121.862 145.877 121.79 145.054C121.714 144.182 121.584 143.534 121.401 143.111C121.222 142.736 120.948 142.394 120.579 142.085C118.515 141.924 116.097 141.892 113.323 141.988C110.603 142.128 108.974 142.198 108.437 142.196C101.679 142.494 96.1641 142.489 91.8912 142.179C87.614 141.821 83.8703 140.587 80.6598 138.477C77.4452 136.318 75.626 132.817 75.2023 127.974C74.9735 125.358 75.6071 122.838 77.103 120.414C78.5948 117.941 80.6205 115.714 83.1801 113.733C77.4597 111.94 72.7294 108.913 68.9893 104.653C65.2934 100.34 63.1277 94.5509 62.4921 87.2861C61.8607 80.0697 63.1948 74.121 66.4943 69.4401C69.838 64.7066 74.1436 61.2065 79.4112 58.9399C84.6788 56.6734 90.1217 55.2943 95.7398 54.8028C99.2753 54.4935 102.768 54.5296 106.217 54.911C109.667 55.2924 112.9 55.9857 115.916 56.9907L111.178 38.8114C113.975 36.7609 117.578 35.5429 121.985 35.1573C125.181 34.8776 128.207 35.1498 131.06 35.9738C133.914 36.7978 136.155 38.139 137.781 39.9976C137.921 40.4735 138.037 41.2442 138.13 42.3097C138.477 46.2811 138.139 50.7762 137.114 55.7949C136.133 60.761 134.028 64.8738 130.8 68.1332C132.848 71.4678 134.048 75.145 134.4 79.1648C134.917 85.0735 134.255 90.6217 132.416 95.8094C130.624 100.993 127.251 105.387 122.296 108.993C117.336 112.55 110.667 114.695 102.288 115.428C99.8667 115.64 97.3355 115.715 94.6948 115.654C94.7613 118.088 95.5544 120.459 97.0739 122.766C103.502 120.935 108.724 119.819 112.74 119.419L117.673 118.914C124.357 118.329 129.454 118.298 132.965 118.821C136.823 119.41 139.814 121.247 141.939 124.331C144.111 127.411 145.401 131.275 145.808 135.925C146.443 143.19 144.749 149.487 140.726 154.817C136.755 160.191 131.34 164.398 124.481 167.438C117.67 170.474 110.317 172.338 102.423 173.028C95.1097 173.668 88.4876 173.003 82.5565 171.033C76.6254 169.063 72.6211 164.85 70.5434 158.395C71.6544 152.685 74.3369 148.205 78.5911 144.953C84.9629 148.056 90.9772 150.141 96.6341 151.208C102.339 152.27 107.444 152.604 111.948 152.21ZM102.68 97.3128C106.167 97.0078 108.182 96.6118 108.725 96.1251C109.804 93.3954 110.223 90.6502 109.981 87.8896C109.731 85.0321 108.842 82.4013 107.314 79.9973C106.638 79.5196 105.197 79.2308 102.992 79.1309C100.836 79.0267 98.4986 79.0848 95.9801 79.3052C92.8321 79.5806 90.7422 79.9586 89.7106 80.4393C88.4423 83.2344 87.9267 85.9881 88.164 88.7003C88.4056 91.4609 89.3366 94.0148 90.9573 96.3619C92.0821 96.9468 93.7248 97.3155 95.8855 97.468C98.0904 97.568 100.355 97.5162 102.68 97.3128Z"
+              fill="white" />
+          </svg>
+
+        </div>
+        <div class="col">
+          <h1 class="fw-bold brand-color mb-2">The voices of Grandiose</h1>
+          <p class="lead brand-color">Yes they write, read it you’ll learn something</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="d-flex gap-2 mb-4">
+      <button class="btn btn-primary le-bouton">Grandiose creatives</button>
+      <button class="btn btn-primary le-bouton">Grandiose writers</button>
+      <button class="btn btn-primary le-bouton">Grandiose SEO</button>
+    </div>
+
+    <div class="row g-4">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card light-blue h-100 p-4 d-flex flex-column">
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <span class="badge rounded-pill text-bg-light">Badges</span>
+            <span class="text-dark-emphasis fs-6 text">Preamble</span>
           </div>
-          <div class="col">
-            <h1 class="fw-bold brand-color mb-2">They are Grandiose</h1>
-            <p class="lead brand-color">Look at these projects ! Our clients portfolio</p>
+          <h2 class="fs-4 fw-bold flex-grow-1">How to sell drugs online, fast</h2>
+          <a href="#" class="link-underline-primary">Read</a>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card light-purple h-100 p-4 d-flex flex-column">
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <span class="badge rounded-pill text-bg-light">Badges</span>
+            <span class="text-dark-emphasis fs-6 text">Preamble</span>
+
           </div>
+          <h2 class="fs-4 fw-bold flex-grow-1">Do what I say, not what I do</h2>
+          <a href="#" class="link-underline-primary">Read</a>
         </div>
       </div>
 
-<body class="bg-white p-4">
-
-  <div class="d-flex gap-2 mb-4">
-    <button class="btn btn-primary le-bouton">Grandiose creatives</button>
-    <button class="btn btn-primary le-bouton">Grandiose writers</button>
-    <button class="btn btn-primary le-bouton">Grandiose SEO</button>
-  </div>
-
-  <div class="row g-4">
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="card light-blue h-100 p-4 d-flex flex-column">
-        <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-light">Badges</span>
-          <span class="text-dark-emphasis fs-6 text">Preamble</span>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card light-pink h-100 p-4 d-flex flex-column">
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <span class="badge rounded-pill text-bg-light">Badges</span>
+            <span class="text-dark-emphasis fs-6 text">Preamble</span>
+          </div>
+          <h2 class="fs-4 fw-bold flex-grow-1">Learn by doing, do it now</h2>
+          <a href="#" class="link-underline-primary">Read</a>
         </div>
-        <h2 class="fs-4 fw-bold flex-grow-1">How to sell drugs online, fast</h2>
-        <a href="#" class="link-underline-primary">Read</a>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card light-orange h-100 p-4 d-flex flex-column">
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <span class="badge rounded-pill text-bg-light">Badges</span>
+            <span class="text-dark-emphasis fs-6 text">Preamble</span>
+          </div>
+          <h2 class="fs-4 fw-bold flex-grow-1">Looking for a job ?<br>Let others do this for you</h2>
+          <a href="#" class="link-underline-primary">Read</a>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card light-blue h-100 p-4 d-flex flex-column">
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <span class="badge rounded-pill text-bg-light">Badges</span>
+            <span class="text-dark-emphasis">Preamble</span>
+          </div>
+          <h2 class="fs-4 fw-bold flex-grow-1">Grandiose, the best thing that happened to me</h2>
+          <a href="#" class="link-underline-primary">Read</a>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card light-green h-100 p-4 d-flex flex-column">
+          <div class="mb-3 d-flex align-items-center gap-2">
+            <span class="badge rounded-pill text-bg-light">Badges</span>
+            <span class="text-dark-emphasis fs-6 text">Preamble</span>
+          </div>
+          <h2 class="fs-4 fw-bold flex-grow-1">Get a life, get a job, get a dog</h2>
+          <a href="#" class="link-underline-primary">Read</a>
+        </div>
       </div>
     </div>
 
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="card light-purple h-100 p-4 d-flex flex-column">
-        <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-light">Badges</span>
-          <span class="text-dark-emphasis fs-6 text">Preamble</span>
+    <nav class="mt-5">
+      <ul class="pagination justify-content-end bg-light rounded p-3">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      </ul>
+    </nav>
 
+  <footer class="custom-footer">
+        <div class="footer-content">
+          <div class="mb-4"> 
+              <img src="images/MAQUETTAGE WEB images/Version Logo Default.png" class="img-custom1 footer-logo-img" alt="logo" ></img>
+          </div>
+            <button class="footer-button">Be Grandiose</button>
+            <div class="footer-addresses">
+                <div class="address-block">
+                    <h3>New York Office</h3>
+                    <p>1065 Avenue of the Americas, New York, NY 10018-1878</p>
+                </div>
+                <div class="address-block">
+                    <h3>London Office</h3>
+                    <p>Swains Lane Highgate, London N6 6PJ England</p>
+                </div>
+            </div>
         </div>
-        <h2 class="fs-4 fw-bold flex-grow-1">Do what I say, not what I do</h2>
-        <a href="#" class="link-underline-primary">Read</a>
-      </div>
-    </div>
+    </footer>
 
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="card light-pink h-100 p-4 d-flex flex-column">
-        <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-light">Badges</span>
-          <span class="text-dark-emphasis fs-6 text">Preamble</span>
-        </div>
-        <h2 class="fs-4 fw-bold flex-grow-1">Learn by doing, do it now</h2>
-        <a href="#" class="link-underline-primary">Read</a>
-      </div>
-    </div>
 
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="card light-orange h-100 p-4 d-flex flex-column">
-        <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-light">Badges</span>
-          <span class="text-dark-emphasis fs-6 text">Preamble</span>
-        </div>
-        <h2 class="fs-4 fw-bold flex-grow-1">Looking for a job ?<br>Let others do this for you</h2>
-        <a href="#" class="link-underline-primary">Read</a>
-      </div>
-    </div>
-
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="card light-blue h-100 p-4 d-flex flex-column">
-        <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-light">Badges</span>
-          <span class="text-dark-emphasis">Preamble</span>
-        </div>
-        <h2 class="fs-4 fw-bold flex-grow-1">Grandiose, the best thing that happened to me</h2>
-        <a href="#" class="link-underline-primary">Read</a>
-      </div>
-    </div>
-
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="card light-green h-100 p-4 d-flex flex-column">
-        <div class="mb-3 d-flex align-items-center gap-2">
-          <span class="badge rounded-pill text-bg-light">Badges</span>
-          <span class="text-dark-emphasis fs-6 text">Preamble</span>
-        </div>
-        <h2 class="fs-4 fw-bold flex-grow-1">Get a life, get a job, get a dog</h2>
-        <a href="#" class="link-underline-primary">Read</a>
-      </div>
-    </div>
-  </div>
-
-<nav class="mt-5">
-  <ul class="pagination justify-content-end bg-light rounded p-3">
-    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
-</nav>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
