--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
 <body>
   <div class="page-transition" id="page-transition"></div>
 
+<!-- forum qui est lier a hire us -->
   <div class="modal fade" id="hireModal" tabindex="-1" aria-labelledby="hireModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content rounded-4 shadow">
@@ -26,11 +27,11 @@
           <form>
             <div class="mb-3">
               <label class="form-label">Your full name</label>
-              <input type="text" class="form-control" placeholder="Eg. John Grandiose">
+              <input type="text" class="form-control" placeholder="Eg. Maysan Grandiose">
             </div>
             <div class="mb-3">
               <label class="form-label">Email</label>
-              <input type="email" class="form-control" placeholder="Eg. john@grandiose.com">
+              <input type="email" class="form-control" placeholder="Eg. maysan@grandiose.com">
             </div>
             <div class="mb-3">
               <label class="form-label">Describe your project in a few lines</label>
@@ -88,18 +89,19 @@
     </div>
   </div>
 
+<!-- debut du code avec la nav barre -->
   <div class="container py-4 px-3 mx-auto">
     <header class="d-flex align-items-center justify-content-start">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
       <nav class="d-flex gap-4">
         <a class="brand-color-menu2" href="#" onclick="transitionToPage('index.html')">Welcome</a>
         <a class="brand-color-menu2" data-bs-toggle="modal" data-bs-target="#hireModal">Hire us !</a>
-        <a class="brand-color-menu2" href="#" onclick="transitionToPage('index5.html')">Work</a>
+        <a class="brand-color-menu2" href="#" onclick="transitionToPage('work.html')">Work</a>
         <a class="brand-color-menu1" href="#" onclick="transitionToPage('blog.html')">Blog</a>
       </nav>
     </header>
 
-
+<!-- texte d'intro -->
     <div class="container py-5">
       <div class="row align-items-center">
         <div class="col-auto">
@@ -118,12 +120,14 @@
       </div>
     </div>
 
+<!-- bouton -->
     <div class="d-flex gap-2 mb-4">
       <button class="btn btn-primary le-bouton">Grandiose creatives</button>
       <button class="btn btn-primary le-bouton">Grandiose writers</button>
       <button class="btn btn-primary le-bouton">Grandiose SEO</button>
     </div>
 
+<!-- carte de couleur -->
     <div class="row g-4">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card light-blue h-100 p-4 d-flex flex-column">
@@ -193,6 +197,7 @@
       </div>
     </div>
 
+<!-- barre qui permet le changement de page -->
     <nav class="mt-5">
       <ul class="pagination justify-content-end bg-light rounded p-3">
         <li class="page-item"><a class="page-link" href="#">Previous</a></li>
@@ -204,6 +209,7 @@
     </nav>
   </div>
 
+<!-- footer --> 
     <div style="height: 100px;"></div>
     <footer class="custom-footer">
       <div class="footer-content">
