--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Grandiose</title>
-  <link rel="stylesheet" href="styles5.css">
+  <link rel="stylesheet" href="work.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="transition.css" />
 </head>
@@ -11,7 +11,7 @@
 
   <div class="page-transition" id="page-transition"></div>
 
-
+<!-- forum qui est lier a hire us -->
   <div class="modal fade" id="hireModal" tabindex="-1" aria-labelledby="hireModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content rounded-4 shadow">
@@ -24,11 +24,11 @@
           <form>
             <div class="mb-3">
               <label class="form-label">Your full name</label>
-              <input type="text" class="form-control" placeholder="Eg. John Grandiose">
+              <input type="text" class="form-control" placeholder="Eg. Noémie Grandiose">
             </div>
             <div class="mb-3">
               <label class="form-label">Email</label>
-              <input type="email" class="form-control" placeholder="Eg. john@grandiose.com">
+              <input type="email" class="form-control" placeholder="Eg. noemie@grandiose.com">
             </div>
             <div class="mb-3">
               <label class="form-label">Describe your project in a few lines</label>
@@ -85,17 +85,20 @@
       </div>
     </div>
   </div>
+
+<!-- debut du code avec la nav barre -->
   <div class="container py-4 px-3 mx-auto">
     <header class="d-flex align-items-center justify-content-start">
       <h2 class="brand-color-title mb-0 me-4">GRANDIOSE</h2>
       <nav class="d-flex gap-4">
         <a class="brand-color-menu2" href="#" onclick="transitionToPage('index.html')">Welcome</a>
         <a class="brand-color-menu2" data-bs-toggle="modal" data-bs-target="#hireModal">Hire us !</a>
-        <a class="brand-color-menu1" href="#" onclick="transitionToPage('index5.html')">Work</a>
+        <a class="brand-color-menu1" href="#" onclick="transitionToPage('work.html')">Work</a>
         <a class="brand-color-menu2" href="#" onclick="transitionToPage('blog.html')">Blog</a>
       </nav>
     </header>
 
+<!-- titre -->
     <div class="row align-items-center my-5">
       <div class="col-auto">
         <img src="images/MAQUETTAGE WEB images/Logo.png" alt="Logo" class="img-custom2">
@@ -106,6 +109,7 @@
       </div>
     </div>
 
+<!-- grande carte -->
     <section class="bg-primary text-white p-4 rounded-4">
       <div class="mb-3">
         <span class="badge bg-light text-dark">Our latest project</span>
@@ -118,6 +122,7 @@
       <a href="#" class="btn btn-light text-primary fw-bold">Discover how we helped</a>
     </section>
 
+<!-- carte d'entreprise -->
     <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
         <div class="col">
           <div class="card h-100">
@@ -207,6 +212,7 @@
     </div>
   </div>
 
+<!-- barre qui permet le changement de page -->
   <div class="container mt-2 mb-0">
     <nav>
       <ul class="pagination justify-content-end bg-light rounded p-3">
@@ -223,6 +229,7 @@
     </nav>
   </div>
 
+<!-- footer -->
   <div style="height: 100px;"></div>
   <footer class="custom-footer">
     <div class="footer-content">
